Some update in index page

--- a/about.html
+++ b/about.html
@@ -333,7 +333,9 @@ $(document).ready(function () {
 <div id="internship-experience" class="section level1">
 <h1>Internship Experience</h1>
 <p>07/2018-10/2018</p>
-<p>Mitacs Summer Internship Program: Child Maltreatment and Genetic Variation in Adult Psychopathology: A Systematic Review Department of Psychiatry at McGill University Supervisor: Dr Xiangfei Meng Responsibility:</p>
+<p>Mitacs Summer Internship Program: Child Maltreatment and Genetic Variation in Adult Psychopathology: A Systematic Review</p>
+<p>Department of Psychiatry at McGill University</p>
+<p>Supervisor: Dr Xiangfei Meng Responsibility:</p>
 <p>Followed the standard process of Meta-analysis:</p>
 <p>￭ Extracted available data and completed the quality evaluation for the screened paper.</p>
 <p>￭ Did the heterogeneity analysis, divided and summarized quantitative and qualitative parts.</p>
