--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<title>Sibei’s HW 4</title>
+<title>This is Sibei Liu’s personal website</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -376,20 +376,25 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Sibei’s HW 4</h1>
+<h1 class="title toc-ignore">This is Sibei Liu’s personal website</h1>
 
 </div>
 
 
-<p><strong>This is Sibei Liu’s personal website</strong></p>
 <div id="basic-information" class="section level1">
 <h1>Basic information</h1>
+<p>Birth: 1996.02.23</p>
+<p>Gender: Female</p>
+<p>Self_Intro:</p>
 </div>
 <div id="education-information" class="section level1">
 <h1>Education Information</h1>
+<p>Please see <a href="about.html">here</a> for detailed education experience</p>
 </div>
 <div id="life-in-china-and-america" class="section level1">
 <h1>Life in China and America</h1>
+<p><strong>China</strong>:</p>
+<p><strong>America</strong>:</p>
 </div>
 
 
