--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@ div.tocify {
 <p>Birth: 1996.02.23</p>
 <p>Gender: Female</p>
 <p>Self_Intro:</p>
+<p>I am so lucky to have the opportunity to study biostatistics at Columbia University and have the chance to embrace a whole new world. Hopefully, during those two years, I can harvest a beautiful memory, a lot of friends and achieve my initial goal.</p>
 </div>
 <div id="education-information" class="section level1">
 <h1>Education Information</h1>
@@ -394,7 +395,13 @@ div.tocify {
 <div id="life-in-china-and-america" class="section level1">
 <h1>Life in China and America</h1>
 <p><strong>China</strong>:</p>
+<p>Here is my dog:</p>
+<p><img src="image/mypuppy4.jpg" /></p>
+<p>Here is in my undergraduate graduation ceremony:</p>
+<p><img src="image/graduation2.jpg" /></p>
 <p><strong>America</strong>:</p>
+<p>A photo of the landmark in Columbia University</p>
+<p><img src="image/maincampus3.jpg" /></p>
 </div>
 
 
